# ChangeLog for x11-terms/st
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-terms/st/ChangeLog,v 1.16 2013/06/17 06:08:43 xmw Exp $

  17 Jun 2013; Michael Weber <xmw@gentoo.org> st-0.4.1.ebuild, st-0.4.ebuild,
  st-9999.ebuild:
  Update LICENSE to MIT-with-advertising (bug 472664, thanks Jack Chen)

*st-0.4.1 (27 Apr 2013)

  27 Apr 2013; Jeroen Roovers <jer@gentoo.org> st-0.4.ebuild, +st-0.4.1.ebuild,
  st-9999.ebuild:
  DEPEND on virtual/pkgconfig, X11 protos. Version bump.

  02 Apr 2013; Agostino Sarubbo <ago@gentoo.org> -st-0.3.ebuild, st-0.4.ebuild:
  Add ~x86, remove old, wrt to bug #464252

*st-0.4 (02 Apr 2013)

  02 Apr 2013; Michael Weber <xmw@gentoo.org> +st-0.4.ebuild:
  Version bump.

  23 Feb 2013; Michael Weber <xmw@gentoo.org> st-9999.ebuild:
  Fix missing git-2 eclass.

  23 Feb 2013; Michael Weber <xmw@gentoo.org> -st-0.1.1.ebuild,
  -st-0.2.1.ebuild, st-0.3.ebuild, st-9999.ebuild:
  Correct X11 paths (thanks Joe M, bug 458796), verbose build.

  22 Feb 2013; Michael Weber <xmw@gentoo.org> st-0.3.ebuild, st-9999.ebuild,
  metadata.xml:
  Add IUSE savedconfig, update live ebuild.

  17 Dec 2012; Michael Weber <xmw@gentoo.org> st-9999.ebuild:
  Update live ebuild from mercurial to git (thanks Andreas Wiese, bug 447564)

  07 Nov 2012; Jeroen Roovers <jer@gentoo.org> st-0.3.ebuild:
  Show elog messages only on first install.

  07 Nov 2012; Jeroen Roovers <jer@gentoo.org> st-0.3.ebuild:
  Add more deps.

*st-0.3 (07 Nov 2012)

  07 Nov 2012; Jeroen Roovers <jer@gentoo.org> +st-0.3.ebuild:
  Version bump.

  07 Mar 2012; Jeroen Roovers <jer@gentoo.org> st-0.1.1.ebuild,
  st-0.2.1.ebuild, st-9999.ebuild:
  Do not install installation instructions (README).

*st-0.2.1 (07 Mar 2012)

  07 Mar 2012; Jeroen Roovers <jer@gentoo.org> st-0.1.1.ebuild,
  +st-0.2.1.ebuild, st-9999.ebuild:
  Do not hard-code version in SRC_URI. Use SRC_URI arrows. Do not set SRC_URI
  in 9999 ebuild. Version bump.
