@@ -2,16 +2,15 @@
 Hash: SHA256
 
 DIST st-0.4.1.tar.gz 32947 SHA256 ee2f93c6d8cd95a5ab47423eeebde4a474be470309ceee33fa3c7757eae2bf31 SHA512 06a75cdf7d22c64c1331276b0f58577c3c42c1c2edcb41a33a3c37f7b65bd284a3b006dd94e0dc081f42f028dd18b60f278e8b3f33a1cf6611b1398bff80df7d WHIRLPOOL ef59a069eaceaa8ed606913645525b5bf44828f5e82cc024f802a0f4bd1962a6df01253dd1787aacf0bdefb94071792551b3362a0d3e7326ac4cceb718fc8272
-DIST st-0.4.tar.gz 32396 SHA256 307aef01d0de0411439bf32d55c23a930e779efd003a31acaa0ddcf8b45a3afe SHA512 d8e4f9c28756d2f8d2f7f041cf8c6fa4026c722edddab5f682d82d7fcab842b23fcc087770986b3e1383e47be115576dbfdd444c6edb6ba860d27d30c92122f1 WHIRLPOOL 55445903b621c87b5bee23b47bdc2f797ee225b044618533068b6667e3f56b7df1b93b3bb00d0952ec3ff52f07c0383a5a903031227f3ecdf67343a50cfc7c1f
+EBUILD st-0.4.1-r1.ebuild 1454 SHA256 a28f753ec3a656f9742c374d355f27cb40253f9c5b5c7bbce97543fe6d218adb SHA512 6da7e032c0677d53c0c62732ecf9d12ca8936ef7e53e38ea5ed9c019953bb266debd30d334bc84af54b88c0ac1d5b66ab9ab1830764b6b52ec88e47c1c09a49e WHIRLPOOL 8bce9506464840135bda2d77013410ee9adb48a7cd2af6e8b460549a98c688925872b872dceba78f6f369ccd7edd7b0c218afe117e130db73e2494623d8d524a
 EBUILD st-0.4.1.ebuild 1357 SHA256 a133148866a26ad3387d83b4be3677abf2cf43db7c69b3d7b4dd66471eb53338 SHA512 5ce977e50d1a6269a1b10db3d85b373ab75ff24eca65b2c162db74f1f5896e73bf4e88611672af4654060289d74c84ffe57924982465b0fa7cad9d6128f8cd46 WHIRLPOOL 402eb480a5b02d4be0f4985c876f8562d86597296fce2412e44b626e1b8dc16a9f52dfe76b671c1e8ae3adc420693b712321c513410a61ee57afb2e0b9ce0d5e
-EBUILD st-0.4.ebuild 1355 SHA256 a8b8245b21a38ff407801a9ecdf472bfbde584dddb784c7680a1d93b1fbc229b SHA512 8cb6f9819f2588ca46d203e81fc1e75dad61fe8aa39432bf7e21ede251f1a2966cd9efa9798f42561102845032162d18647d4b7ffbf08f2287c5deace237d75a WHIRLPOOL 28fa48d82b19e61394b6316763a0009f099441031997c655f61058d7dc339ff2655076b9a22c53db9596fc396acaac0f429f33824bc14785a6ae78e1e73251be
-EBUILD st-9999.ebuild 1448 SHA256 edaec0502806da8bfcea3a7cd2e2022542aefc08b177548ea9788ab154e9cc5b SHA512 51a594673fccc10deebd48898d8a1deeab27cf7f0f696f0852f84440d020b08f47a69206e74912a27af7f7cafd26dcc92d9cb5a32f8c51fada5071861ffca413 WHIRLPOOL 7a9e87ae9ea5742dcb86a570a9459a30613de2af981ad1e823b5f4b7882c5f4306d4a8ffb172188cb18d6ba0b9eb72b1ec8dcca554f04ad465e299e1a44f6ec7
-MISC ChangeLog 2437 SHA256 3aea5ef168dee7d0acbe4372e3db6b2f368bc9352cfc4e5a48ae5a3c248ee4bd SHA512 4212a933faf117900f486d27f8f8677f6fea14ddcb5b946990bbad97cd0f86183a54ddd4a9f35bc050fceea9792d5fe8f2f653ffe6d8db04fa56f6361d12f4da WHIRLPOOL 7d85d6deecfc9d2ccd1aa207d017601a0effbc0c686dbb5649688ab5fc58cc121fec602d18fca03f8fe8df062545bea4c03d157d3fbcc19db1d98321a051a2be
+EBUILD st-9999.ebuild 1542 SHA256 fdaf561dac61e9ad228f91edc621f82e18595af7fc3c7cd2ef81494ff0a3585a SHA512 ca0b5b8367463b5b84c88e8c8547f0e4fe01e03744b020783d7ec05a028f95e6649825c3306a0523b5e18da36e23cecbc9a008d016ac736da502cdb3b4ebdc25 WHIRLPOOL 61ece856f2f5c474aa8d3cfcdb7874a250935f705aee79d3e0199aa2dec54a38ebbbbb30de1adbc2012658bfdb939f65cbda57adb098ec379787503187be6fd0
+MISC ChangeLog 2617 SHA256 9d5e6c8ebe00017feb3c91e87a43c87a9223a3bb471965a7940a3c62d96a75d5 SHA512 979ab7624975e870528240995a568062522fc4fe6e4874c6e23a04bcd385dcdcfeb30ea36017ee39448f6eb3a1c73ff7fb0aceffc82337328f71a77ad03572a8 WHIRLPOOL 7c2b038f715867479065b6193d045a28af4a56521cc7a67499236308a176cf4d3c67f905c093a61aa4c06d7f2a8b0b3b475cad67c9280660372bfbac0d8cdf8b
 MISC metadata.xml 223 SHA256 89097f936927d56068988263e382edb683f359b27293955708e9ade4d256220d SHA512 c9f6a48b2aa05afdf73b8bd824c65480d76e54b659ca39928398c66f764d34faf186255d8aea034737424a962cf35151b610d078a01f8193b027c63e1e3c51b5 WHIRLPOOL 1ce20c98a7e177b8f510ef41f3935b0db5e04b2ecf465a683b2f2515f6a3043c33e6e9efc87f5aaaf59b2ed9be376d9d16bc8beff66b11aaa50ea899bfdc1f62
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.20 (GNU/Linux)
+Version: GnuPG v2.0.22 (GNU/Linux)
 
-iF4EAREIAAYFAlG+p+gACgkQknrdDGLu8JBxFwD+KWWi1UZTy+QhMhpvu43Wjjj7
-dpB/oY2CcH0rWyGydBgA/2UwX96GafzkAhy9qvoMnkwzqpBV8THAY+G7DAzIO3kF
-=gOB2
+iEYEAREIAAYFAlLLHYIACgkQVWmRsqeSphO+eACfQrLKLHtXAdadeS/GOEYDLrej
+NccAn2kUHXWVSe0YuXi9c3QEUb+gLdZz
+=Ly3h
 -----END PGP SIGNATURE-----
